[metadata]
name = belaboxgpio
version = 0.1.0
author = rnsc
author_email = github@rnsc.be
description = Belabox control through GPIO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rnsc/belabox-gpio
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
  Jetson.GPIO==2.0.17
  rplcd==1.3.0
  smbus2==0.4.1

[options.entry_points]
console_scripts=
  belaboxgpio=belaboxgpio.command_line:main

[options.packages.find]
where = src
